--- a/app-slug/gallery-files/2021-07-01-app-slug.md
+++ b/app-slug/gallery-files/2021-07-01-app-slug.md
@@ -14,6 +14,6 @@ contest-year: 2021
 thumbnail:    [app-slug].png
 ---
 
-Add brief app description highlighting most important components of the app here.
+Add brief app description highlighting most important components of the app here. Keep it brief, but feel free to add multiple paragraphs.
 
 This app was recognized _[as a winner/as a runner up/with an honorable mention]_ on the 2021 Shiny Contest.
