gallery file update

--- a/svgInput/gallery-files/2021-07-01-svgInput.md
+++ b/svgInput/gallery-files/2021-07-01-svgInput.md
@@ -17,9 +17,9 @@ thumbnail:    app-slug.png
 
 Create Shiny inputs from your SVG images in 3 easy steps.
 
-1: Upload your SVG
-2: Set Shiny input values using the highlight tool
-3: Download the R function script, JS-Shiny binding and the optional sample app
+1. Upload your SVG
+2. Set Shiny input values using the highlight tool
+3. Download the R function script, JS-Shiny binding and the optional sample app
 
 Also see the example gallery with the Iris, mtcars and Titanic datasets.
 
